--- a/src/views/pages/Approval/Approval.css
+++ b/src/views/pages/Approval/Approval.css
@@ -14,6 +14,7 @@
   
   .contact-info {
     font-size: 1rem;
+    margin-bottom: 8px;
   }
   
   .email, .phone {
@@ -33,4 +34,10 @@
     margin-left: 1rem;
     margin-right: 1rem;
   }
+
+.login-btn{
+  background-color: #ffed4b;
+  color: rgb(0, 0, 0);
+  border-radius: 4px;
+}
   
